--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
 python:
   - "3.3"
-install: pip install -r requirements.txt --use-mirrors
+install: pip install -r requirements.txt
 script: ./main_tests.py
