--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
+blinker==1.4
+boto==2.49.0
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+coverage==4.5.4
+cssmin==0.2.0
 Flask==1.1.1
-gunicorn
-requests
-coverage
-flask-appconfig
-flask-mail
-flask-caching
-flask-compress
-flask-assets
-jsmin
-cssmin
-boto>=2.36.0
-inflect
-Pillow
+flask-appconfig==0.11.1
+Flask-Assets==0.12
+Flask-Caching==1.7.2
+Flask-Compress==1.4.0
+Flask-Mail==0.9.1
+gunicorn==20.0.0
+idna==2.8
+importlib-metadata==0.23
+inflect==3.0.2
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jsmin==2.2.2
+MarkupSafe==1.1.1
+more-itertools==7.2.0
+Pillow==6.2.1
+requests==2.22.0
+six==1.13.0
+urllib3==1.25.6
+webassets==0.12.1
+Werkzeug==0.16.0
+zipp==0.6.0
